Phuc | Update code and docs
