# docs/swagger.yaml
@@ -268,6 +268,30 @@ paths:
       summary: Register a new user
       tags:
       - Auth
+  /google:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses: {}
+      summary: Log in with Google
+      tags:
+      - Auth
+  /google/callback:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Google callback
+      tags:
+      - Auth
   /permissions:
     get:
       produces:
@@ -467,8 +491,6 @@ paths:
                 data:
                   $ref: '#/definitions/models.UserWithAccounts'
               type: object
-      security:
-      - ApiKey: []
       summary: Get user by ID
       tags:
       - User
@@ -495,8 +517,9 @@ paths:
       - User
 securityDefinitions:
   ApiKey:
+    description: Insert key to access the apis
     in: header
-    name: api_key
+    name: X-ApiKey
     type: apiKey
   Bearer:
     description: Type "Bearer" followed by a space and JWT token.
